--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "framer-motion": "^5.6.0",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,7 +17,6 @@
   },
   "devDependencies": {
     "eslint": "^8.6.0",
-    "eslint-config-next": "^12.0.8",
-    "prettier": "^2.5.1"
+    "eslint-config-next": "^12.0.8"
   }
 }
