--- a/data/jsprojects.json
+++ b/data/jsprojects.json
@@ -19,5 +19,12 @@
         "github": "https://github.com/markmark345/Coins-Ranking"
       },
       "description": "This project is about coins rangking top Cryptocurrencies for Android appication "
+    },
+    {
+      "title": "Google Scholar ",
+      "links": {
+        "github": "https://github.com/markmark345/Coins-Ranking"
+      },
+      "description": "This project is about to collect information about research activity from Thammasat University"
     }
   ]
