--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "npm run build && next export && type nul > out/.nojekyll",
+    "serve": "npm run export && serve out",
+    "deploy": "npm run export && node gh-pages.js"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
@@ -11,10 +14,13 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "framer-motion": "^5.6.0",
+    "gh-pages": "^3.2.3",
+    "moment": "^2.29.1",
     "next": "^12.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "serve": "^13.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
